--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-toastify": "^9.1.3",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
