--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "jsonwebtoken": "^9.0.1",
