--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.35.3",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
