--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
+    "daisyui": "^3.9.4",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "typescript": "5.1.3"
