implement range porcent for register presence culto

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-slot": "^1.0.2",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@tanstack/react-query": "^4.36.1",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -28,7 +29,7 @@
     "lucide-react": "^0.244.0",
     "next": "^13.4.12",
     "next-auth": "^4.22.1",
-    "nextjs-toploader": "^1.4.2",
+    "nextjs-toploader": "^1.6.4",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-day-picker": "^8.7.1",
