--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "valibot": "^0.11.1",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.3.0",
