--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "jsonwebtoken": "^9.0.1",
+    "lucide": "^0.316.0",
     "lucide-react": "^0.244.0",
     "next": "^14.0.4",
     "next-auth": "^4.22.1",
