--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-slot": "^1.0.2",
     "@ramonak/react-progress-bar": "^5.0.3",
-    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-query-devtools": "^5.24.0",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.5",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.3.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
