--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@tanstack/react-query": "^5.22.2",
@@ -20,6 +21,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
@@ -30,7 +32,7 @@
     "lucide": "^0.316.0",
     "lucide-react": "^0.244.0",
     "next": "^14.0.4",
-    "next-auth": "^4.22.1",
+    "next-auth": "^5.0.0-beta.19",
     "nextjs-toploader": "^1.6.4",
     "postcss": "8.4.23",
     "react": "^18.2.0",
@@ -51,6 +53,7 @@
     "@rocketseat/eslint-config": "^1.3.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/eslint-plugin-query": "^5.20.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
