--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@tanstack/react-query": "^5.22.2",
@@ -22,7 +23,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.6.0",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
@@ -42,9 +43,9 @@
     "react-hook-form": "^7.45.4",
     "react-toastify": "^9.1.3",
     "swr": "^2.2.0",
-    "tailwind-merge": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "valibot": "^0.11.1",
     "zod": "^3.21.4",
     "zustand": "^4.4.7"
