--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@tanstack/react-query": "^5.22.2",
