--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.6.0",
     "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
