--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@ramonak/react-progress-bar": "^5.0.3",
+    "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@tanstack/react-table": "^8.19.2",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.5",
