--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.6.0",
+    "@lordicon/react": "^1.10.0",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -39,11 +40,13 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.10",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "jsonwebtoken": "^9.0.1",
+    "lottie-web": "^5.12.2",
     "lucide": "^0.316.0",
     "lucide-react": "^0.244.0",
     "next": "^14.0.4",
