--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.10",
-    "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "jsonwebtoken": "^9.0.1",
     "lottie-web": "^5.12.2",
@@ -68,16 +67,23 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@rocketseat/eslint-config": "^1.3.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/eslint": "^9.6.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "daisyui": "^3.9.4",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.9.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "typescript-eslint": "^8.3.0"
   }
 }
