--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.12.7",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
