--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.6.0",
@@ -77,6 +78,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
+    "@types/uuid": "^10.0.0",
     "daisyui": "^3.9.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
@@ -85,6 +87,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "typescript": "5.1.3",
-    "typescript-eslint": "^8.3.0"
+    "typescript-eslint": "^8.3.0",
+    "uuid": "^10.0.0"
   }
 }
