--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@lordicon/react": "^1.10.0",
     "@phosphor-icons/react": "^2.0.9",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -86,6 +87,7 @@
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^5.20.0",
     "typescript": "5.1.3",
     "typescript-eslint": "^8.3.0",
     "uuid": "^10.0.0"
