--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^5.20.0",
-    "typescript": "5.1.3",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^8.3.0",
     "uuid": "^10.0.0"
   }
