--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.5",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@tanstack/match-sorter-utils": "^8.15.1",
