--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "endOfLine": "crlf",
   "trimTrailingWhitespace": true,
   "insertFinalNewline": true,
-  "singleQuote": true,
-  "semi": false
+  "semi": true
 }
