--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,9 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "camelcase": "off",
+    "no-warning-comments": "off",
   },
   "parserOptions": {
     "sourceType": "module",
