--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "next/core-web-vitals",
     "@rocketseat/eslint-config/react",
     "plugin:@tanstack/eslint-plugin-query/recommended",
+    "plugin:prettier/recommended",
     "prettier"
   ],
   "plugins": ["simple-import-sort"],
