--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.10",
     "eslint-config-next": "13.4.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "jsonwebtoken": "^9.0.1",
     "lottie-web": "^5.12.2",
     "lucide": "^0.316.0",
