--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.10",
     "eslint-config-next": "13.4.3",
+    "glob": "^10.4.5",
     "jsonwebtoken": "^9.0.1",
     "lottie-web": "^5.12.2",
     "lucide": "^0.316.0",
@@ -64,6 +65,7 @@
     "react-hook-form": "^7.45.4",
     "react-toastify": "^9.1.3",
     "recharts": "^2.12.7",
+    "rimraf": "^5.0.10",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
@@ -73,7 +75,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
+    "@eslint/js": "^9.14.0",
     "@rocketseat/eslint-config": "^1.3.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/eslint-plugin-query": "^5.20.1",
@@ -84,15 +86,16 @@
     "@types/react": "18.2.14",
     "@types/uuid": "^10.0.0",
     "daisyui": "^3.9.4",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "globals": "^15.9.0",
+    "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^5.20.0",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.3.0",
+    "typescript-eslint": "^8.12.2",
     "uuid": "^10.0.0"
   }
 }
