--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^14.0.4",
     "next-auth": "^5.0.0-beta.25",
     "nextjs-toploader": "^1.6.4",
+    "nookies": "^2.5.2",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
