--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/eslint": "^9.6.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
+    "@types/nookies": "^1.1.0",
     "@types/react": "18.2.14",
     "@types/uuid": "^10.0.0",
     "daisyui": "^3.9.4",
