--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dayjs": "^1.11.10",
     "eslint-config-next": "13.4.3",
     "glob": "^10.4.5",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "lottie-web": "^5.12.2",
     "lucide": "^0.316.0",
@@ -82,6 +83,7 @@
     "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^9.6.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
